syntax = "proto3";

package GetSession;

option go_package = "./proto;GetSession";

service GetSession {
	rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}

}

message GetSessionRequest {

	string session_id = 1;
}

message GetSessionResponse {
	string errno=1;
	string err_msg=2;
	string user_name = 3;
}

